<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;
use Illuminate\Database\Eloquent\SoftDeletes;

class Product extends Model
{
    use SoftDeletes;

    protected $table = 'products';

    protected $fillable = [
        'category_id',
        'brand_id',
        'name',
        'slug',
        'description',
        'short_description',
        'thumbnail',
        'price',
        'sale_price',
        'stock',
        'sold_count',
        'status',
        'is_featured',
        'meta_title',
        'meta_description',
    ];

    protected $casts = [
        'price' => 'decimal:2',
        'sale_price' => 'decimal:2',
        'is_featured' => 'boolean',
        'status' => 'boolean',
    ];

    /*
    |--------------------------------------------------------------------------
    | RELATIONSHIPS
    |--------------------------------------------------------------------------
    */

    public function category()
    {
        return $this->belongsTo(Category::class);
    }

    public function brand()
    {
        return $this->belongsTo(Brand::class);
    }

    public function variants()
    {
        return $this->hasMany(ProductVariant::class);
    }

    // ⭐ THÊM ĐOẠN NÀY
    public function reviews()
    {
        return $this->hasMany(\App\Models\Review::class);
    }

    // ✅ THÊM: nhiều ảnh sản phẩm
    public function images()
    {
        return $this->hasMany(\App\Models\ProductImage::class);
    }

    // ✅ THÊM: lấy ảnh chính
    public function mainImage()
    {
        return $this->hasOne(\App\Models\ProductImage::class)
                    ->where('is_main', 1);
    }
    public function specs()
{
    return $this->hasMany(ProductSpec::class, 'product_id')->orderBy('sort_order');
}
}