Table admin_logs {
  id bigint
  admin_id bigint
  action varchar
  model varchar
  model_id bigint
  description text
  ip_address varchar
  created_at timestamp
}

Table banners {
  id bigint
  title varchar
  image varchar
  link varchar
  position varchar
  sort_order int
  status tinyint
  created_at timestamp
  updated_at timestamp
}

Table brands {
  id bigint
  name varchar
  slug varchar
  logo varchar
  description text
  website varchar
  country varchar
  status tinyint
  meta_title varchar
  meta_description text
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table cache {
  key varchar
  value mediumtext
  expiration int
}

Table cache_locks {
  key varchar
  owner varchar
  expiration int
}

Table carts {
  id bigint
  user_id bigint
  session_id varchar
  total_items int
  total_price decimal
  created_at timestamp
  updated_at timestamp
}

Table cart_items {
  id bigint
  cart_id bigint
  product_variant_id bigint
  price decimal
  quantity int
  subtotal decimal
  created_at timestamp
  updated_at timestamp
}

Table categories {
  id bigint
  name varchar
  slug varchar
  description text
  image varchar
  icon varchar
  parent_id bigint
  is_featured tinyint
  status tinyint
  sort_order int
  meta_title varchar
  meta_description text
  meta_keywords text
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table chats {
  id bigint
  user_id bigint
  message text
  sender enum
  created_at timestamp
  updated_at timestamp
}

Table coupons {
  id bigint
  code varchar
  type enum
  value decimal
  min_order_amount decimal
  max_discount decimal
  usage_limit int
  used_count int
  starts_at timestamp
  expires_at timestamp
  status tinyint
  created_at timestamp
  updated_at timestamp
}

Table failed_jobs {
  id bigint
  uuid varchar
  connection text
  queue text
  payload longtext
  exception longtext
  failed_at timestamp
}

Table inventory_history {
  id bigint
  product_variant_id bigint
  type enum
  quantity int
  previous_stock int
  current_stock int
  reference_type varchar
  reference_id bigint
  notes text
  user_id bigint
  created_at timestamp
  updated_at timestamp
}

Table jobs {
  id bigint
  queue varchar
  payload longtext
  attempts tinyint
  reserved_at int
  available_at int
  created_at int
}

Table job_batches {
  id varchar
  name varchar
  total_jobs int
  pending_jobs int
  failed_jobs int
  failed_job_ids longtext
  options mediumtext
  cancelled_at int
  created_at int
  finished_at int
}

Table migrations {
  id int
  migration varchar
  batch int
}

Table notifications {
  id char
  type varchar
  notifiable_type varchar
  notifiable_id bigint
  data text
  read_at timestamp
  created_at timestamp
  updated_at timestamp
}

Table orders {
  id bigint
  order_number varchar
  user_id bigint
  customer_name varchar
  total_price decimal
  email varchar
  coupon_id bigint
  total_amount decimal
  shipping_fee decimal
  discount_amount decimal
  tax_amount decimal
  grand_total decimal
  status enum
  payment_status enum
  payment_method varchar
  shipping_name varchar
  shipping_phone varchar
  shipping_address text
  shipping_city varchar
  shipping_district varchar
  shipping_country varchar
  note text
  ordered_at timestamp
  completed_at timestamp
  created_at timestamp
  updated_at timestamp
  delivery_staff_id bigint
  delivery_note text
  coupon_code varchar
  shipping_cost decimal
  shipping_postal_code varchar
  shipper_id bigint
  delivery_status varchar
  delivery_user_id bigint
}

Table order_items {
  id bigint
  order_id bigint
  product_id bigint
  product_variant_id bigint
  product_name varchar
  sku varchar
  price decimal
  quantity int
  subtotal decimal
  created_at timestamp
  updated_at timestamp
}

Table password_reset_tokens {
  email varchar
  token varchar
  created_at timestamp
}

Table payments {
  id bigint
  order_id bigint
  payment_method enum
  transaction_id varchar
  amount decimal
  currency varchar
  status enum
  paid_at timestamp
  created_at timestamp
  updated_at timestamp
}

Table personal_access_tokens {
  id bigint
  tokenable_type varchar
  tokenable_id bigint
  name text
  token varchar
  abilities text
  last_used_at timestamp
  expires_at timestamp
  created_at timestamp
  updated_at timestamp
}

Table posts {
  id bigint
  category_id bigint
  title varchar
  slug varchar
  summary text
  content longtext
  image varchar
  views int
  is_featured tinyint
  status tinyint
  meta_title varchar
  meta_description text
  published_at timestamp
  created_at timestamp
  updated_at timestamp
}

Table post_categories {
  id bigint
  name varchar
  slug varchar
  description text
  status tinyint
  sort_order int
  meta_title varchar
  meta_description text
  created_at timestamp
  updated_at timestamp
}

Table products {
  id bigint
  name varchar
  slug varchar
  short_description text
  description longtext
  category_id bigint
  brand_id bigint
  thumbnail varchar
  warranty_months int
  weight decimal
  length decimal
  width decimal
  height decimal
  is_featured tinyint
  is_new tinyint
  status tinyint
  view_count int
  sold_count int
  meta_title varchar
  meta_description text
  meta_keywords text
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
  price decimal
  sale_price decimal
  stock int
  has_variants tinyint
}

Table product_attributes {
  id bigint
  type enum
  value varchar
  sort_order int
  created_at timestamp
  updated_at timestamp
}

Table product_images {
  id bigint
  product_id bigint
  image varchar
  alt_text varchar
  is_main tinyint
  sort_order int
  created_at timestamp
  updated_at timestamp
}

Table product_specifications {
  id bigint
  product_id bigint
  spec_group varchar
  spec_key varchar
  spec_value varchar
  sort_order int
  created_at timestamp
  updated_at timestamp
}

Table product_specs {
  id bigint
  product_id bigint
  name varchar
  value varchar
  sort_order int
  created_at timestamp
  updated_at timestamp
}

Table product_variants {
  id bigint
  product_id bigint
  sku varchar
  barcode varchar
  color varchar
  storage varchar
  ram varchar
  cpu varchar
  gpu varchar
  screen_size varchar
  operating_system varchar
  battery varchar
  camera varchar
  price decimal
  sale_price decimal
  cost_price decimal
  stock int
  min_stock int
  max_stock int
  weight decimal
  image varchar
  status tinyint
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table refund_requests {
  id bigint
  order_id bigint
  user_id bigint
  type enum
  return_code varchar
  reason text
  video_path varchar
  video_original_name varchar
  status varchar
  admin_note text
  reviewed_at timestamp
  reviewed_by bigint
  return_shipper_id bigint
  picked_up_at timestamp
  returned_at timestamp
  created_at timestamp
  updated_at timestamp
}

Table reviews {
  id bigint
  user_id bigint
  product_id bigint
  rating int
  title varchar
  comment text
  images json
  is_approved tinyint
  created_at timestamp
  updated_at timestamp
}

Table sessions {
  id varchar
  user_id bigint
  ip_address varchar
  user_agent text
  payload longtext
  last_activity int
}

Table settings {
  id bigint
  key_name varchar
  value text
  type varchar
  created_at timestamp
  updated_at timestamp
}

Table stock_histories {
  id bigint
  product_variant_id bigint
  type enum
  quantity int
  note text
  created_at timestamp
}

Table subscribers {
  id bigint
  email varchar
  status tinyint
  created_at timestamp
  updated_at timestamp
}

Table system_settings {
  id int
  setting_key varchar
  setting_value varchar
  updated_at timestamp
}

Table users {
  id bigint
  name varchar
  email varchar
  email_verified_at timestamp
  password varchar
  role enum
  phone varchar
  avatar varchar
  gender enum
  date_of_birth date
  address text
  city varchar
  country varchar
  postal_code varchar
  latitude decimal
  longitude decimal
  location_updated_at timestamp
  status tinyint
  last_login_at timestamp
  remember_token varchar
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table user_addresses {
  id bigint
  user_id bigint
  full_name varchar
  phone varchar
  address text
  city varchar
  district varchar
  ward varchar
  postal_code varchar
  is_default tinyint
  created_at timestamp
  updated_at timestamp
}

Table wishlists {
  id bigint
  user_id bigint
  product_id bigint
  created_at timestamp
}

Ref: wishlists.product_id > products.id
Ref: orders.coupon_id > coupons.id
Ref: user_addresses.user_id > users.id
Ref: cart_items.product_variant_id > product_variants.id
Ref: stock_histories.product_variant_id > product_variants.id
Ref: orders.shipper_id > users.id
Ref: admin_logs.admin_id > users.id
Ref: reviews.user_id > users.id
Ref: order_items.product_id > products.id
Ref: carts.session_id > sessions.id
Ref: products.brand_id > brands.id
Ref: reviews.product_id > products.id
Ref: inventory_history.product_variant_id > product_variants.id
Ref: inventory_history.user_id > users.id
Ref: refund_requests.return_shipper_id > users.id
Ref: posts.category_id > categories.id
Ref: products.category_id > categories.id
Ref: categories.parent_id > categories.id
Ref: cart_items.cart_id > carts.id
Ref: product_specifications.product_id > products.id
Ref: product_images.product_id > products.id
Ref: orders.delivery_user_id > users.id
Ref: order_items.order_id > orders.id
Ref: order_items.product_variant_id > product_variants.id
Ref: refund_requests.user_id > users.id
Ref: orders.delivery_staff_id > users.id
Ref: wishlists.user_id > users.id
Ref: carts.user_id > users.id
Ref: product_specs.product_id > products.id
Ref: chats.user_id > users.id
Ref: product_variants.product_id > products.id
Ref: orders.user_id > users.id
Ref: refund_requests.order_id > orders.id
Ref: payments.order_id > orders.id
Ref: sessions.user_id > users.id
